--- a/SmatJobPortal/appsettings.json
+++ b/SmatJobPortal/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Admin": {
+    "Email": "admin@gmail.com",
+    "Password": "StrongPass!234"
+  }
 }
