--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+/SmatJobPortal/appsettings.json
+/SmatJobPortal/appsettings.Development.json
